Fixed layout spacing

--- a/scss/04-layout/03-content-container.scss
+++ b/scss/04-layout/03-content-container.scss
@@ -10,10 +10,3 @@
 .content-container article > * + * {
   margin-top: 2em;
 }
-
-.single,
-.page {
-  .content-container article > * + * {
-    margin-top: 4em;
-  }
-}
